only showing links on the base page / fixing spacing // #173

--- a/web/layout/primary.less
+++ b/web/layout/primary.less
@@ -253,7 +253,7 @@ table td .left { text-align: left; }
 
 #postContent
 {
-    padding-top: 60px;
+    padding-top: 80px;
     padding-bottom: 60px;
 
     h1
@@ -692,6 +692,10 @@ table td .left { text-align: left; }
 div.archiveLinks
 {
     padding-top: 15px;
+
+    position: relative;
+    float: left;
+    width: 100%;
 
     text-align: center;
 
